js/src/jit-test/tests/errors/bug-1886940.js
// |jit-test| error: TypeError
[].with(Symbol.hasInstance);
